# anicloud-api

./: LICENSE  setup.cfg
src/anicloud/data/anidata/: account.py  actor.py  anime.py  country.py  director.py  episode.py  genre.py  hoster.py  producer.py  rating.py  season.py
src/anicloud/data/authed/: chat.py  friendship.py  my.py  shoutbox.py
src/anicloud/exception/: __init__.py
src/anicloud/networking/: host_resolver.py  load.py  user_agent.py
src/anicloud/parser/: __init__.py  calendar.py  favourites.py  index.py  popular.py  watchlist.py
src/anicloud/util/: button_in_text.py  dateparser.py  emoji.py  emoji_parser.py  episode_list_parser.py  icon_class_parser.py  language_parser.py  real_url.py
