[metadata]
name = anicloud-api
version = 0.0.1
author = Nanashi Saltzwedel
author_email = nao.s_l_t_e_el@protonmail.com
description = API for anicloud.io build from the website's HTML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nanashisa/anicloud-api
project_urls =
    Bug Tracker = https://github.com/Nanashisa/anicloud-api/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
